<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterUserData">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/userForm"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/title"
            android:textSize="24sp"
            android:text="Extra informatie"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="20dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/voornaam"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="number"
                android:hint="@string/leeftijd"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:paddingVertical="12dp"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:background="@drawable/button_background"
                android:text="@string/start_iq_test"
                android:id="@+id/start_quiz"/>
            </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>