<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/flyingBlocks"
        android:orientation="horizontal"
        android:layout_marginLeft="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/flyingBlocksSecond"
        android:orientation="horizontal"
        android:layout_marginLeft="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/heart"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="16dp"
            android:id="@+id/checkLastFewUsers"
            android:layout_margin="4dp"
            android:background="#00ffffff"
            android:layout_gravity="left"
            android:scaleType="fitCenter"
            android:src="@drawable/database"/>

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="12dp"
            android:id="@+id/checkAboutMe"
            android:layout_margin="4dp"
            android:layout_gravity="right"
            android:background="#00ffffff"
            android:scaleType="fitCenter"
            android:src="@drawable/info"/>

    </GridLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_margin="4dp"
            android:id="@+id/Image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/fake_logo_description"
            android:src="@drawable/fake_logo"/>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:paddingVertical="18dp"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:background="@drawable/button_background"
            android:text="@string/start_iq_test"
            android:id="@+id/start_quiz"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/Image"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="12sp"
        android:textColor="#cc003c52"
        android:padding="4dp"
        android:gravity="bottom|right"
        android:text="@string/author"/>

</androidx.constraintlayout.widget.ConstraintLayout>